Fix: Skip native module rebuild to fix build error without Visual Studio

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "build": {
     "appId": "com.omlx.atlas",
     "productName": "OmLx Atlas",
+    "npmRebuild": false,
     "directories": {
       "output": "dist"
     },
